--- a/KPI.Web/Web.config
+++ b/KPI.Web/Web.config
@@ -75,7 +75,8 @@
   <connectionStrings>
     <clear />
     <!--<add name="KPIDbContext" providerName="System.Data.SqlClient" connectionString="Data Source=VP-B26\MSSQLSERVER18;Initial Catalog=KPI2172019;Integrated Security=SSPI;MultipleActiveResultSets=True" />-->
+    <add name="KPIDbContext" providerName="System.Data.SqlClient" connectionString="Data Source=.;Initial Catalog=KPI;Integrated Security=SSPI;MultipleActiveResultSets=True" />
 
-    <add name="KPIDbContext" providerName="System.Data.SqlClient" connectionString="Data Source=VP-C19;Initial Catalog=KPI;Integrated Security=SSPI;MultipleActiveResultSets=True" />
+    <!--<add name="KPIDbContext" providerName="System.Data.SqlClient" connectionString="Data Source=VP-C19;Initial Catalog=KPI;Integrated Security=SSPI;MultipleActiveResultSets=True" />-->
   </connectionStrings>
 </configuration>
